--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20' # ✅ Required for Baileys 7.x
 
     - name: Install dependencies
       run: npm install
@@ -30,13 +30,27 @@ jobs:
         source: "."
         target: "/home/wapi"
 
-    - name: Restart PM2 app
+    - name: Restart PM2 app on VPS
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USER }}
         key: ${{ secrets.VPS_DEPLOY_KEY }}
         script: |
+          # Ensure Node.js 20+ is installed
+          if ! node -v | grep -q "v20"; then
+            echo "Installing Node.js 20..."
+            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+          fi
+
           cd /home/wapi
-          npm install
-          pm2 restart wapi || pm2 start npm --name "wapi" -- start
+
+          # Install only production dependencies
+          npm install --production
+
+          # If you need to build (for TS or bundling), uncomment:
+          # npm run build
+
+          # Restart app with PM2
+          pm2 reload wapi || pm2 start npm --name "wapi" -- start
