--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,47 +10,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20' # ✅ Required for Baileys 7.x
+      - name: Setup Node.js v20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.18.1'
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Show Node & npm version
+        run: |
+          node -v
+          npm -v
 
-    - name: Copy project to VPS
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USER }}
-        key: ${{ secrets.VPS_DEPLOY_KEY }}
-        source: "."
-        target: "/home/wapi"
+      - name: Install dependencies
+        run: npm install
 
-    - name: Restart PM2 app on VPS
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USER }}
-        key: ${{ secrets.VPS_DEPLOY_KEY }}
-        script: |
-          # Ensure Node.js 20+ is installed
-          if ! node -v | grep -q "v20"; then
-            echo "Installing Node.js 20..."
-            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-          fi
+      - name: Copy project to VPS
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_DEPLOY_KEY }}
+          source: "."
+          target: "/home/wapi"
 
-          cd /home/wapi
-
-          # Install only production dependencies
-          npm install --production
-
-          # If you need to build (for TS or bundling), uncomment:
-          # npm run build
-
-          # Restart app with PM2
-          pm2 reload wapi || pm2 start npm --name "wapi" -- start
+      - name: Restart PM2 app
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_DEPLOY_KEY }}
+          script: |
+            cd /home/wapi
+            npm install
+            pm2 restart wapi || pm2 start npm --name "wapi" -- start
